--- a/index.html
+++ b/index.html
@@ -9,6 +9,19 @@
 
 <body>
     <h1>Hola mundo:master</h1>
+    <h2>Formulario de Contacto:fesature_2</h2>
+    <form action="" method="post">
+        <label for="nombre">Nombre:</label>
+        <input type="text" id="nombre" name="nombre" required><br><br>
+
+        <label for="email">Correo Electrónico:</label>
+        <input type="email" id="email" name="email" required><br><br>
+
+        <label for="mensaje">Mensaje:</label>
+        <textarea id="mensaje" name="mensaje" rows="4" cols="50" required></textarea><br><br>
+
+        <input type="submit" value="Enviar">
+    </form>
 </body>
 
 </html>
