--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
     <h1>Hola mundo:master</h1>
-    <h2>Formulario de Contacto:fesature_2</h2>
+    <h2>Formulario de Contacto:feature_2</h2>
     <form action="" method="post">
         <label for="nombre">Nombre:</label>
         <input type="text" id="nombre" name="nombre" required><br><br>
@@ -22,6 +22,34 @@
 
         <input type="submit" value="Enviar">
     </form>
+    <h2>tabla:feature_3</h2>
+   
+    <table border="1">
+        <tr>
+            <th>ID</th>
+            <th>Nombre</th>
+            <th>Edad</th>
+            <th>Grado</th>
+        </tr>
+        <tr>
+            <td>1</td>
+            <td>Juan Pérez</td>
+            <td>20</td>
+            <td>11º</td>
+        </tr>
+        <tr>
+            <td>2</td>
+            <td>María García</td>
+            <td>19</td>
+            <td>10º</td>
+        </tr>
+        <tr>
+            <td>3</td>
+            <td>Luis González</td>
+            <td>21</td>
+            <td>12º</td>
+        </tr>
+    </table>
 </body>
 
 </html>
